documented user endpoint to fetch ip or not
